--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div.center {
 
 }
 
-g.plotly, rect.cursor-ew-resize {
+g.plotly, rect.cursor-ew-resize, g.cursor-move {
   cursor: auto !important;
 }
 
@@ -35,4 +35,18 @@ div.render-highdensity {
   background-color: #fff; /* Black background with opacity */
   opacity: 85%;
   z-index: 2; 
+}
+
+div.render-message {
+  pointer-events: auto;
+  color: rgb(123, 122, 120);
+  font-style: italic;
+  font-size: 13px;
+}
+
+div.hd-limited-msg {
+  position: absolute;
+  bottom: 6px;
+  font-style: italic;
+  font-size: 10px;
 }
